<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group_op"
        android:checkableBehavior="single">
        <!--Inicio-->
        <item
            android:id="@+id/op_inicio_c"
            android:title="@string/op_inicio_c"
            android:icon="@drawable/icono_inicio"/>
        <!--Mi perfil-->
        <item
            android:id="@+id/op_mi_perfil_c"
            android:title="@string/op_mi_perfil_c"
            android:icon="@drawable/ico_mi_perfil" />

        <item
            android:id="@+id/op_mapa_c"
            android:title="@string/op_mapa"
            android:icon="@drawable/icono_mapa"/>

    </group>

    <!--Cerrar -->
    <item
        android:id="@+id/op_cerrar_sesion_c"
        android:title="@string/op_cerrar_sesion_c"
        android:icon="@drawable/icono_salir" />

</menu>